2005-02-10  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b339

    * Fix: css in a form in albums.php

    * Fix: no class "admin" for admibox in view_album.php

    * Fix: docs link in config was broken

    * Fix: Adjust skins:
	- butterfly_green
	- suit
	- yellow

2005-02-03  Bharat Mediratta  <bharat@menalto.com> 1.5-cvs-b338

    * Added multisite support for caching albums.php.  You can now create a
      file called cache-domain.com.html and it will use that instead of
      cache.html.

2005-02-01  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b337

    * Change: removed unnecessary css definition in add_photos.php

    * Fix: css classed in watermark_album.php

    * Change: Removed unnecessary use of css classes and code indents in:
	- includes/add_photos/add_admin.inc
	- includes/add_photos/add_form.inc
	- includes/add_photos/add_other.inc
	
    * Fix: madmod1 skin was broken

    * Fix: Adjust madmod1 skin

    * Change: Applied RFE/Patch: #1032662, show navigation links to album in search result.

    * Fix: Do not use htmlentities in alt text in albums.php and in general (classes/Image.php)

    * Change: Adjust function to detect only skins that use new naming.

    * Change: Added ltr/rtl checks for iconmenu and adminbox

    * Change: Modidified display of print/mobile services and indenting in view_photo

    * Fix: removed [] around public stats links due to problems in rtl languages

2005-01-31  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b336

    * Fix: Prevent hidden image from being automatically selected as
      a new highlight when the existing highlight is deleted

2005-01-31  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b335

    * Fix: Prevent error if the user requesting the new password link
      doesn't exist anymore.

    * Change: Received the mPUSH associate account creation link from 
      Jon, and was finally able to link it up in the config wizard

2005-01-31  Christian Mohn <h0bbel@p0ggel.org> 1.5-cvs-b334
