@@ -1,3 +1,10 @@
+2005-02-10  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b340
+
+    * Fix 1103572: Exclude ppmquant from using '--quiet', which 
+      it doesn't like.
+
+    * Fix 1099659: Add exiftags support for autorotate
+
 2005-02-10  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b339
 
     * Fix: css in a form in albums.php
